--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "pre-commit>=4.5.0",
     "pytest>=9.0.2",
     "pytest-mock>=3.15.1",
+    "pytest-timeout>=2.4.0",
     "ruff>=0.14.9",
 ]
 
@@ -26,3 +27,7 @@ line-length = 120
 
 [tool.ruff]
 line-length = 120
+
+[tool.pytest.ini_options]
+timeout = 20
+timeout_method = "thread"
