--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,12 +26,15 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
+        name: Set lowercase repo name
+        run: echo "REPO_LOWER=$(echo '${{ github.event.repository.name }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+      -
         name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.REPO_LOWER }}
           tags: |
             type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
             type=ref,event=branch
