fix: update url handling

--- a/env.example
+++ b/env.example
@@ -11,5 +11,5 @@ REPO_URL=https://github.com/netbox-community/devicetype-library.git
 # Branch of devicetype-library to use (default: master)
 REPO_BRANCH=master
 
-# Optional: SSL verification, avoid disabling this in production environment.
-# SKIP_SSL_VERIFY=True
+# Optional: Disable SSL verification (avoid in production)
+# IGNORE_SSL_ERRORS=True
