fix: defensive checks

--- a/env.example
+++ b/env.example
@@ -11,5 +11,7 @@ REPO_URL=https://github.com/netbox-community/devicetype-library.git
 # Branch of devicetype-library to use (default: master)
 REPO_BRANCH=master
 
-# Optional: Disable SSL verification (avoid in production)
+# Optional: Disable SSL certificate verification (INSECURE - development/testing only)
+# WARNING: Setting this to True bypasses certificate validation and exposes connections
+# to man-in-the-middle attacks. Never enable in production environments.
 # IGNORE_SSL_ERRORS=True
