--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
 dev = [
     "black>=25.12.0",
     "pre-commit>=4.5.0",
+    "psutil>=7.1.3",
     "pytest>=9.0.2",
     "pytest-mock>=3.15.1",
     "pytest-timeout>=2.4.0",
