--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dev = [
     "pytest>=9.0.2",
     "pytest-mock>=3.15.1",
     "pytest-timeout>=2.4.0",
+    "referencing>=0.37.0",
     "ruff>=0.14.9",
 ]
 
