--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,9 @@ dependencies = [
 dev = [
     "black>=25.12.0",
     "pre-commit>=4.5.0",
-    "psutil>=7.1.3",
     "pytest>=9.0.2",
     "pytest-mock>=3.15.1",
     "pytest-timeout>=2.4.0",
-    "referencing>=0.37.0",
     "ruff>=0.14.9",
 ]
 
@@ -33,3 +31,6 @@ line-length = 120
 [tool.pytest.ini_options]
 timeout = 20
 timeout_method = "thread"
+testpaths = [
+  "tests"
+]
