fix: changed black to ruff format

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,10 @@ on:
   release:
     types: [published, edited]
 
+concurrency:
+  group: docker-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-and-push-images:
     runs-on: ubuntu-latest
