--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
 repos:
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.43.0
+    hooks:
+      - id: markdownlint
   - repo: local
     hooks:
       - id: ruff
@@ -7,8 +11,8 @@ repos:
         language: system
         types: [python]
         require_serial: true
-      - id: black
-        name: black
+      - id: ruff-format
+        name: ruff-format
         entry: uv run ruff format 
         language: system
         types: [python]
