fix: use item.name instead of str(item) for component cache keys
str(record) returns pynetbox's display name which strips template
variables like {module}, causing rear port lookups to fail for names
like "Filter/{module}/Line" (displayed as "Line"). Use item.name
consistently in _get_cached_or_fetch and _create_generic fallback
paths to match preload_all_components which already uses item.name.

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
-# direnv configuration for itc-lab-tools
+# direnv configuration 
 # Run `direnv allow` to enable
 
 # Source .env file if it exists (contains secrets, not in git)
