--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "pynetbox>=7.5.0",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
-    "tqdm>=4.67.1",
+    "rich>=14.0.0",
 ]
 
 [dependency-groups]
