feat: migrate read queries from REST to GraphQL with configurable tuning
Add a GraphQL client (graphql_client.py) that replaces REST-based read
queries for manufacturers, device types, module types, images, and
component templates.  Key changes:

- Auto-paginated GraphQL queries with server-side clamping detection
- Concurrent component template preloading via thread pool
- GRAPHQL_PAGE_SIZE and PRELOAD_THREADS env vars for performance tuning
  with input validation (must be positive integers)
- DotDict adapter for pynetbox Record-compatible attribute access
- NetBox 4.5+ M2M front-port mapping support for both creation and
  updates (PortTemplateMapping with correct "position" API field)
- requests.Session reuse with proper context-manager support
- HTTP timeouts on all GraphQL requests
- Extracted _build_link_rear_ports helper to deduplicate front-port
  rear-port resolution for device and module types

Includes comprehensive unit tests, updated integration tests with
graceful field-omission handling, and CI workflow for automated
testing against NetBox main.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,34 @@
-NETBOX_URL=
-NETBOX_TOKEN=
-REPO_URL=https://github.com/netbox-community/devicetype-library.git
+NETBOX_TOKEN=XXXXXXXXX-xxxxxxxxx
+NETBOX_URL=https://netbox.example.org
+
 REPO_BRANCH=master
+REPO_URL=https://github.com/netbox-community/devicetype-library.git
+
+# SSL options — choose one approach if your NetBox uses a self-signed or private CA:
+#
+#   Option A (recommended): point requests at your CA bundle so the certificate
+#   is validated properly.  Set REQUESTS_CA_BUNDLE to the path of your PEM-encoded
+#   CA certificate or bundle file.  This is a standard requests/urllib3 variable
+#   and is also respected by most Python HTTP clients.
+# REQUESTS_CA_BUNDLE=/etc/ssl/certs/my-internal-ca.pem
+#
+#   Option B (insecure – dev/test only): disable certificate verification entirely.
+#   IGNORE_SSL_ERRORS=False is the secure default; set to True only for local/dev use.
+#   WARNING: This bypasses all certificate validation and exposes connections to
+#   man-in-the-middle attacks.  Never enable in production environments.
 IGNORE_SSL_ERRORS=False
-#REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt # you should enable this if you are running on a linux system
+
+# Optional: restrict import to specific device type slugs
 #SLUGS=c9300-48u isr4431 isr4331
+
+# Performance tuning — adjust for your NetBox instance size and network
+# Number of items per GraphQL page (default: 5000).
+# Values up to 25000 have been tested successfully on a default NetBox
+# instance with minimal extra latency.  Most NetBox installs cap
+# MAX_PAGE_SIZE at 1000 by default; the client detects server-side
+# clamping and paginates accordingly.
+#GRAPHQL_PAGE_SIZE=5000
+
+# Number of threads for concurrent component preloading (default: 8).
+# Reduce on smaller instances to lower load; increase for faster imports.
+#PRELOAD_THREADS=8
