fix: weekly CI, core/ restructure, v2 token auth, and release workflow
- Fix weekly CI workflow for NetBox main compatibility (v2 token
  creation, device bay subdevice_role, pull_repo URL validation)
- Move library modules into core/ package directory
- Add Bearer auth support for v2 (nbt_) tokens in GraphQL client
  and image uploads
- Add python-semantic-release workflow for automated versioning
- Use RELEASE_PAT to bypass branch protection in release workflow
- Align InvalidGitURL error messages and exception keys

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "gitpython>=3.1.45",
-    "pynetbox>=7.5.0",
+    "pynetbox>=7.6.0",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
@@ -32,7 +32,14 @@ line-length = 120
 [tool.pytest.ini_options]
 timeout = 20
 timeout_method = "thread"
+pythonpath = ["."]
 testpaths = [
   "tests"
 ]
 norecursedirs = ["tests/integration"]
+
+[tool.semantic_release]
+version_toml = ["pyproject.toml:project.version"]
+branch = "main"
+commit_message = "chore(release): v{version}"
+build_command = ""
