--- a/tests/fixtures/device-types/TestVendor/full-device.yaml
+++ b/tests/fixtures/device-types/TestVendor/full-device.yaml
@@ -5,6 +5,7 @@ slug: testvendor-full-device
 part_number: TFD-1
 u_height: 2
 is_full_depth: true
+subdevice_role: parent
 weight: 10.5
 weight_unit: kg
 airflow: front-to-rear
