fix: update semantic-release config to v8+ and fix validate_git_url docstring

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ norecursedirs = ["tests/integration"]
 
 [tool.semantic_release]
 version_toml = ["pyproject.toml:project.version"]
-branch = "main"
 commit_message = "chore(release): v{version}"
 build_command = ""
+
+[tool.semantic_release.branches.main]
+match = "(main|master)"
