fix: NetBox 4.5+ compatibility with v2 token auth for CI improvements (#22)
* fix: weekly CI, core/ restructure, v2 token auth, and release workflow

- Fix weekly CI workflow for NetBox main compatibility (v2 token
  creation, device bay subdevice_role, pull_repo URL validation)
- Move library modules into core/ package directory
- Add Bearer auth support for v2 (nbt_) tokens in GraphQL client
  and image uploads
- Add python-semantic-release workflow for automated versioning
- Use RELEASE_PAT to bypass branch protection in release workflow
- Align InvalidGitURL error messages and exception keys

* fix: update semantic-release config to v8+ and fix validate_git_url docstring

* fix: validate file:// URLs have a non-empty path

--- a/.github/workflows/test-netbox-main.yaml
+++ b/.github/workflows/test-netbox-main.yaml
@@ -99,13 +99,14 @@ jobs:
           DJANGO_SUPERUSER_PASSWORD=admin python manage.py createsuperuser \
             --username=admin --email=admin@example.com --no-input
           TOKEN=$(python manage.py shell -c "
-          from django.apps import apps
-          Token = apps.get_model('users', 'Token')
+          from users.models import Token
           from django.contrib.auth import get_user_model
           user = get_user_model().objects.get(username='admin')
-          t = Token.objects.create(user=user)
-          print(t.key)
-          ")
+          t = Token(user=user)
+          t.save()
+          # v2 token credential: nbt_<key>.<plaintext> (plaintext only available right after save)
+          print(f'nbt_{t.key}.{t.token}')
+          " 2>/dev/null | tail -1)
           echo "NETBOX_TOKEN=$TOKEN" >> "$GITHUB_ENV"
           echo "Created API token"
 
