feat: add CI coverage check, semantic-release contributor attribution
- Add pytest-cov to CI tests workflow with 80% fail threshold
- Add custom semantic-release Jinja2 templates that extract contributor
  @usernames from GitHub noreply emails for release notes and changelog
- Configure template_dir in semantic-release settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,5 +70,8 @@ version_toml = ["pyproject.toml:project.version"]
 commit_message = "chore(release): v{version}"
 build_command = ""
 
+[tool.semantic_release.changelog]
+template_dir = "templates"
+
 [tool.semantic_release.branches.main]
 match = "(main|master)"
