feat: REPO_PATH env var, move default back to project root, add path validation

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ NETBOX_URL=https://netbox.example.org
 REPO_BRANCH=master
 REPO_URL=https://github.com/netbox-community/devicetype-library.git
 
+# Local path where the device-type library repository is cloned.
+# Defaults to a "repo" directory in the project root when not set.
+# Use an absolute path or a path relative to where you run the script.
+#REPO_PATH=./repo
+
 # SSL options — choose one approach if your NetBox uses a self-signed or private CA:
 #
 #   Option A (recommended): point requests at your CA bundle so the certificate
