fix: address code review findings (src_file in error msg, empty env vars, slug guard, test assertions, docstrings, coverage XML)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ testpaths = [
 norecursedirs = ["tests/integration"]
 
 [tool.coverage.run]
-source = ["core", "."]
+source = ["."]
 omit = ["tests/*", "setup.py", "conftest.py"]
 
 [tool.coverage.report]
