feat: add rack-type, reduce complexity, add option to configure REPO_PATH location (#27)
* Fix all ruff linting errors (D101, D417, E501)

- D417: Rename Parameters: → Args: in docstrings across core/log_handler.py,
  core/repo.py, and core/netbox_api.py
- D101: Add one-liner docstrings to all test classes missing them in
  tests/test_change_detector.py, tests/test_log_handler.py,
  tests/test_netbox_api.py, tests/test_repo.py, tests/test_settings.py
- E501: Wrap all lines exceeding 120 chars in docstrings and code across
  core/log_handler.py, core/repo.py, core/netbox_api.py, nb-dt-import.py,
  tests/test_graphql_client.py, tests/test_netbox_api.py, tests/test_repo.py

* docs: add contribution attribution to CHANGELOG and fix markdownlint

* feat: add CI coverage check, semantic-release contributor attribution

- Add pytest-cov to CI tests workflow with 80% fail threshold
- Add custom semantic-release Jinja2 templates that extract contributor
  @usernames from GitHub noreply emails for release notes and changelog
- Configure template_dir in semantic-release settings

* tests: achieve 100% coverage of core/graphql_client.py

Add tests for previously uncovered lines:
- DotDict.__setattr__ (line 37): attribute assignment path
- _to_dotdict list input (line 65) and non-numeric id ValueError (lines 59-60)
- NetBoxGraphQLClient.close(), __enter__, __exit__ (lines 156, 159, 162)
- query() ValueError path for bad JSON responses (lines 186-187)
- query_all() on_page callback (line 240)
- query_all() print() fallback when no log_handler (line 265)
- get_module_type_images() string object_id conversion and ValueError skip (lines 424-427)
- get_component_templates() front_port_templates rear_port_position
  fallback: success path and double-failure re-raise path (lines 468-487)
- get_component_templates() non-front_port GraphQL error re-raise

* test: achieve 100% coverage of nb-dt-import.py

Add test classes covering all previously uncovered lines (39, 78-97,
114-142, 224, 2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,16 +17,38 @@ dependencies = [
 dev = [
     "pre-commit>=4.5.0",
     "pytest>=9.0.2",
+    "pytest-cov>=6.0",
     "pytest-mock>=3.15.1",
     "pytest-timeout>=2.4.0",
     "ruff>=0.14.9",
 ]
 
-[tool.black]
-line-length = 120
-
 [tool.ruff]
 line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "D", "C901"]
+ignore = [
+    # Docstring style choices (pick D211+D212 convention)
+    "D203",  # no-blank-line-before-class (incompatible with D211)
+    "D213",  # multi-line-summary-second-line (incompatible with D212)
+    # Overly strict docstring requirements
+    "D100",  # missing docstring in public module
+    "D104",  # missing docstring in public package
+    "D105",  # missing docstring in magic method
+    # Google-style section formatting — too pedantic
+    "D406",  # section name should end with a newline
+    "D407",  # missing dashed underline after section
+    "D411",  # missing blank line before section
+    "D413",  # missing blank line after last section
+]
+
+[tool.ruff.lint.mccabe]
+# Flag errors (`C901`) whenever the complexity level exceeds 15.
+max-complexity = 15
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**" = ["D102", "D103"]  # test functions don't need docstrings
 
 [tool.pytest.ini_options]
 timeout = 20
@@ -37,10 +59,20 @@ testpaths = [
 ]
 norecursedirs = ["tests/integration"]
 
+[tool.coverage.run]
+source = ["."]
+omit = ["tests/*", "setup.py", "conftest.py"]
+
+[tool.coverage.report]
+fail_under = 96
+
 [tool.semantic_release]
 version_toml = ["pyproject.toml:project.version"]
 commit_message = "chore(release): v{version}"
 build_command = ""
+
+[tool.semantic_release.changelog]
+template_dir = "templates"
 
 [tool.semantic_release.branches.main]
 match = "(main|master)"
